--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Shopping Cart with Node.js, Express, MongoDB",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.5.0",
     "mongoose": "^5.9.18"
   },
   "devDependencies": {},
