--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
     "express-validator": "^5.3.0",
-    "mongoose": "^5.9.18"
+    "fs-extra": "^9.0.1",
+    "mkdirp": "^1.0.4",
+    "mongoose": "^5.9.18",
+    "resize-img": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
