--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Shopping Cart with Node.js, Express, MongoDB",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.3",
@@ -16,6 +17,8 @@
     "mkdirp": "^1.0.4",
     "mongoose": "^5.9.18",
     "mv": "^2.1.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^1.8.1",
     "resize-img": "^2.0.0"
   },
