change in package.json

--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
   "bugs": {
     "url": "https://github.com/Neha218/ShoppingCart/issues"
   },
-  "homepage": "https://github.com/Neha218/ShoppingCart#readme"
+  "homepage": "/"
 }
